baml_language/crates/baml_tests/snapshots/compiles/config_model_string/baml_tests__compiles__config_model_string__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.MyAwsClient$new(lenient: bool) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: bool // lenient // param
    let _2: baml.llm.PrimitiveClientOptions
    let _3: baml.llm.BedrockOptions
    let _4: map<string, string>
    let _5: map<string, string>
    let _6: map<string, unknown>

    bb0: {
        _3 = baml.llm.BedrockOptions { const null, const null, const null, const null, const null, const null, const null, const 100_i64, const 0.7_f64, const null };
        _4 = {  }: map<string, string>;
        _5 = {  }: map<string, string>;
        _6 = {  }: map<string, unknown>;
        _2 = baml.llm.PrimitiveClientOptions { const "anthropic.claude-3-haiku-20240307-v1:0", const null, const null, const null, const null, const null, const null, const null, const null, const "sk-1234", copy _3, const null, copy _4, copy _5, copy _6 };
        _0 = baml.llm.PrimitiveClient { const "MyAwsClient", const "aws-bedrock", copy _2 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
