baml_language/crates/baml_tests/snapshots/compiles/config_model_string/baml_tests__compiles__config_model_string__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 7481
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
